# HoneyBadgerMPC

./: Dockerfile
.benchmarks/Linux-CPython-3.7-64bit/: 0001_pclog.json  0002_hbavss_loglin.json  0002_pclog.json  0003_hbavss_loglin.json  0003_pclog.json  0004_hbavss_loglin.json  0004_hbavss_worst.json  0005_hbavss_amt.json  0006_hbavss_pcl.json  0007_hbavss_worst.json  0008_hbavss_best_amt.json  0009_hbavss_best_pcl.json
benchmark/: test_benchmark_hbacss2_actual_pcl.py  test_benchmark_hbacss2_dummy_pcl.py  test_benchmark_hbavss_actual_loglin.py  test_benchmark_hbavss_loglin.py  test_benchmark_poly_commit_log.py  test_benchmark_rbc.py
honeybadgermpc/: betterpairing.py  hbavss.py  ipc.py  poly_commit_const.py  poly_commit_const_dl.py  poly_commit_dummy.py  poly_commit_log.py  polynomial.py  profiling.py  proofs.py  proofs_interactive.py  share_recovery.py
pairing/: Cargo.toml
pairing/pypairing/: __init__.py
pairing/src/: lib.rs
scripts/: benchmarkamt.sh  benchmarkhbavss.sh  gengraphs.py  hbavss_com_gengraphs.py  polycommit_loglin_gengraphs.py  polycommit_specific_gengraphs.py
scripts/amt/: t1.txt  t11.txt  t2.txt  t21.txt  t33.txt  t5.txt  vssresults.csv
tests/: fixtures.py  test_betterpairing.py  test_hbavss.py  test_interactive_proofs.py  test_poly_commit_log.py
