[package]
name = "pypairing"

# Remember to change version string in README.md.
version = "0.14.2"
authors = [
    "Tom Yurek <yurek2@gmail.com>",
    "Rahul Mahadev"
]
license = "MIT/Apache-2.0"
[lib]
name = "pypairing"
crate-type = ["cdylib"]

description = "A Python Wrapper for a rust library that performs Bls 12-381 operations"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/ebfull/pairing"
repository = "https://github.com/ebfull/pairing"

[dependencies]
rand = "0.4"
byteorder = "1"
ff = { version = "0.4", features = ["derive"] }
sha2 = "0.8.1"
hex = "0.3.1"
num-bigint = "0.2.6"
num-traits = "0.2.11"

[dependencies.pyo3]
# version = "0.9.2"
git = "https://github.com/PyO3/pyo3"
features = ["extension-module", "num-bigint"]

[features]
unstable-features = ["expose-arith"]
expose-arith = []
default = []
